...
                                .padding([.bottom, .trailing], UIScreen.screenHeight * 0.01)
                        }
                    }
                }
            }
            .accessibilityLabel("Listen to \(word)")
            .accessibilityIdentifier("word-audio")
        }
        .frame(width: UIScreen.screenWidth * 0.90, height: UIScreen.screenHeight * 0.25)
        .padding(.bottom, UIScreen.screenHeight * 0.03)
    }
}

...
